Atualizada versao do jmslapa/mf. Criados namespace raiz PSR-4. Criada classe Application. Criado primeiro endpoint, primeiro controller, primeira view e o layout default.

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,14 @@
         }
     ],
     "minimum-stability": "RC",
+    "autoload": {
+        "psr-4": {
+            "App\\": "./app",
+            "Bootstrap\\": "./bootstrap",
+            "Plugins\\": "./plugins",
+            "Support\\": "./support"
+        }
+    },
     "require": {
         "jmslapa/mf": "^1.2@RC"
     }
